penultima version vinos

--- a/app/src/main/res/layout/activity_add_vinos.xml
+++ b/app/src/main/res/layout/activity_add_vinos.xml
@@ -26,6 +26,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline3">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditNomadd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nombre" />
@@ -43,6 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/texInLaNombreadd">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditBodegadd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bodega" />
@@ -60,6 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/texInLaBodegaadd">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditColoradd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/color" />
@@ -77,6 +80,7 @@
         app:layout_constraintTop_toBottomOf="@+id/texInLaColoradd">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditOrigenadd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/origen" />
@@ -94,6 +98,7 @@
         app:layout_constraintTop_toBottomOf="@+id/texInLaOrigenadd">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditFehcadd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/fecha" />
@@ -111,6 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/texInLaFechaadd">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditGraduadd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/graduacion" />
