--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline5">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textineditId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/comrpuebaid" />
